--- a/curriculo/style2.css
+++ b/curriculo/style2.css
@@ -42,6 +42,10 @@ header {
 	margin-bottom: 5px;
 }
 
+.info-pessoal h3{
+    font-style: italic;
+}
+
 .funcao {
 	font-weight: 300;
 	font-size: 1.2rem;
@@ -82,7 +86,7 @@ header {
 main .objetivo,
 main .container {
 	background: white;
-	padding: 20px;
+    padding: 10px 10px 20px 20px;
 	margin-bottom: 20px;
 	border-radius: 8px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -107,9 +111,11 @@ main h4 {
 	margin: 30px 0px;
 	color: #fff;
 	text-align: center;
-    height: 80%;
+	height: 80%;
+	background-color: lightgray;
+	color: #34495e;
+	border-radius: 8px;
 }
-
 .ferramentas {
 	font-weight: bold;
 	color: #2980b9;
