--- a/Trabalho1/style.css
+++ b/Trabalho1/style.css
@@ -1,8 +1,9 @@
 body {
 	background-color: #fafafa;
-	margin: padding;
+	margin: auto;
+	padding: auto;
 	align-items: center;
-	font-family: Arial, sans-serif;
+	font-family: 'Inter';
 }
 
 header nav {
@@ -27,14 +28,14 @@ main {
 	align-items: center;
 }
 .container {
-	background-color:white;
-    border: 1px solid #bcbcbc;
+	background-color: white;
+	border: 1px solid #bcbcbc;
 	border-radius: 8px;
 	padding: 2rem;
 	align-items: center;
 	margin-bottom: 3rem;
 }
-.card{
+.card {
 	border: 2px solid #bcbcbc;
 	border-radius: 8px;
 	padding: 20px;
@@ -43,15 +44,18 @@ main {
 	background-color: white;
 	margin: 20px auto;
 }
-.card1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem;
+.card1 {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 2rem;
 }
 li {
 	list-style-type: none;
 }
 p {
 	color: black;
+}
+a {
+	text-decoration: none;
 }
