--- a/Trabalho1/style.css
+++ b/Trabalho1/style.css
@@ -13,7 +13,7 @@ body {
 header {
     width: 100%;
     padding: 3rem 7.5% 18rem;
-    background-image: url("imagens/background.webp");
+    background-image: url("assets/background.webp");
     background-size: cover;
     background-position: center;
     box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.5);
